# graphql-ws

./: MANIFEST.in  setup.cfg  tox.ini
examples/django_channels2/: .gitignore  package-lock.json  package.json
examples/django_channels2/client/: App.vue  apollo.js  chat.js
examples/django_channels2/django_channels2/: schema.py  settings.py  urls.py
examples/django_channels2/django_channels2/static/: chat.css  chat.js
examples/django_channels2/django_channels2/templates/: chat.html
graphql_ws/: __init__.py  aiohttp.py  base.py  django_channels.py  gevent.py  observable_aiter.py  websockets_lib.py
