[metadata]
name = graphql-ws
version = 0.2.0
description = Websocket server for GraphQL subscription
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/markdown
author = Syrus Akbary
author_email = me@syrusakbary.com
url = https://github.com/graphql-python/graphql-ws
license = MIT
keywords = graphql, subscriptions, graphene, websockets
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    graphql-core==2.*

[options.packages.find]
include = graphql_ws

[options.extras_require]
maintainer =
    wheel
    bumpversion
dev =
    # watchdog
    flake8
    tox
    coverage
    Sphinx
    PyYAML
    pytest
    pytest-runner
    gevent
    graphene>=2.0
    django==1.11.*; python_version<"3"
    channels==1.*; python_version<"3"
    django==2.*; python_version>="3"
    channels==2.*; python_version>="3"

[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:graphql_ws/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[check-manifest]
ignore =
    */node_modules/*
    */.cache/*
    .github
    .github/*
